--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,10 @@
 /npm-debug.log*
 /testem.log
 /yarn-error.log
+/.yarn/
 
 # ember-try
 /.node_modules.ember-try/
 /bower.json.ember-try
 /package.json.ember-try
+/yarn.lock.ember-try
