--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-sinon",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "description": "Ember CLI addon for sinon.js",
   "keywords": [
     "ember-addon",
@@ -14,8 +14,7 @@
     "test": "tests"
   },
   "maintainers": [
-    "Chris Santero",
-    "Jordan Hawker <hawker.jordan@gmail.com> (http://www.JordanHawker.com)"
+    "Foodee"
   ],
   "scripts": {
     "build": "ember build --environment=production",
@@ -26,41 +25,47 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "broccoli-funnel": "^2.0.0",
-    "broccoli-merge-trees": "^3.0.0",
-    "ember-cli-babel": "^7.17.2",
-    "sinon": "^9.0.0"
+    "@ember/test-helpers": "^3.3.1",
+    "broccoli-funnel": "^3.0.8",
+    "broccoli-merge-trees": "^4.2.0",
+    "ember-auto-import": "^2.7.4",
+    "ember-cli-babel": "^8.2.0",
+    "ember-qunit": "^8.1.0",
+    "sinon": "^18.0.0"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.3.0",
-    "@glimmer/component": "^1.0.0",
-    "@glimmer/tracking": "^1.0.0",
-    "babel-eslint": "^10.0.3",
-    "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.3",
-    "ember-cli": "~3.16.0",
-    "ember-cli-app-version": "^3.1.0",
-    "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "^4.2.2",
-    "ember-cli-inject-live-reload": "^2.0.2",
+    "@babel/core": "^7.24.9",
+    "@babel/eslint-parser": "^7.25.0",
+    "@ember/optional-features": "^2.1.0",
+    "@ember/string": "^4.0.0",
+    "@embroider/test-setup": "^4.0.0",
+    "@glimmer/component": "^1.1.2",
+    "@glimmer/tracking": "^1.1.2",
+    "ember-cli": "~5.10.0",
+    "ember-cli-app-version": "^7.0.0",
+    "ember-cli-dependency-checker": "^3.3.2",
+    "ember-cli-htmlbars": "^6.3.0",
+    "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-release": "1.0.0-beta.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
-    "ember-load-initializers": "^2.1.1",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^4.6.0",
-    "ember-resolver": "^7.0.0",
-    "ember-source": "~3.16.0",
-    "ember-source-channel-url": "^2.0.1",
-    "ember-try": "^1.4.0",
-    "eslint-plugin-ember": "^7.7.2",
-    "eslint-plugin-node": "^11.0.0",
+    "ember-load-initializers": "^2.1.2",
+    "ember-maybe-import-regenerator": "^1.0.0",
+    "ember-resolver": "^12.0.1",
+    "ember-source": "^5.10.1",
+    "ember-source-channel-url": "^3.0.0",
+    "ember-template-lint": "^6.0.0",
+    "ember-try": "^3.0.0",
+    "eslint": "^9.8.0",
+    "eslint-plugin-ember": "^12.1.1",
+    "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^1.0.0"
+    "qunit": "^2.21.1",
+    "qunit-dom": "^3.2.0",
+    "sourcemap-validator": "^2.1.0",
+    "webpack": "^5.93.0"
   },
   "engines": {
     "node": "10.* || >= 12"
@@ -70,5 +75,6 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
-  }
+  },
+  "packageManager": "yarn@4.3.1"
 }
